--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,6 +5,9 @@
     --c-decoration: #eaeaea;
     --font: "Roboto Slab";
     --font-wheight: 400;
+    --line-height: 1.5;
+    --letter-spacing: 1.4px;
+    --word-spacing: normal;
 }
 
 * {
@@ -19,10 +22,11 @@ body {
     background-color: var(--c-background);
     color: var(--c-font);
     font-size: 12pt;
-    line-height: 1.5;
+    line-height: var(--line-height);
     font-family: var(--font);
     font-weight: var(--font-wheight);
-    letter-spacing: 1.4px;
+    letter-spacing: var(--letter-spacing);
+    word-spacing: var(--word-spacing);
 }
 
 li {
@@ -58,12 +62,18 @@ a:hover {
 .menu-section {
     width: 100%;
     padding-bottom: 20px;
-    border-bottom: var(--c-decoration) 2px solid;
+    border-bottom: 2px solid var(--c-decoration);
     margin-bottom: 50px;
+    height: fit-content;
+}
+
+.sub-nav-div {
+    border-top: 2px solid var(--c-decoration);
+    width: 100%;
 }
 
 .main-nav {
-    padding-right: 15px;
+    padding-right: 0px;
 }
 
 .image-text-bundle {
@@ -154,7 +164,9 @@ a:hover {
     text-align: justify;
 }
 
-
+table {
+    width: 100%;
+}
 
 /*************** DESKTOP */
 
@@ -238,6 +250,10 @@ a:hover {
 
                     .return-link {
                         display: none;
+                    }
+
+                    .main-nav {
+                        padding-right: 15px;
                     }
                 }
 
