--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
                         <!-- Main nav -->
                         <div>
                             <nav>
-                                <a class="bold-text" href="/">Übersicht</a> 
+                                <a class="bold-text" href="/">graintopixel.de</a> 
                                 <br> 
                                 <br>   
                                 <a href="category/stories">Stories</a>
