--- a/templates/stories_overview.html
+++ b/templates/stories_overview.html
@@ -29,7 +29,7 @@
                         <!-- Main nav -->
                         <div id="id-nav">
                             <nav>
-                                <a class="bold-text" href="/">Übersicht</a> 
+                                <a class="bold-text" href="/">graintopixel.de</a> 
                                 <br> 
                                 <br>   
                                 <a href="stories">Stories</a>
