--- a/templates/article_template02.html
+++ b/templates/article_template02.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
 
-    <title>Analogue Archive</title>
+    <title>{{article.title}}</title>
     <script src="{% static 'js/script.js' %}"></script>
 
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
