--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,25 +17,6 @@
     scrollbar-width: thin;
 }
 
-.overlay {
-    width: 100%;
-    height: 100%;
-    background-color: #000000dc;
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    justify-content: center; /* Horizontale Zentrierung */
-    align-items: center;
-    cursor: pointer;
-}
-
-.image-fullsize {
-    height: 80vh;
-    border: 40px solid white;
-    cursor:none;
-}
-
 body {
     background-color: var(--c-background);
     color: var(--c-font);
@@ -73,6 +54,8 @@ li {
 
 .content-section {
     width: 100%;
+    height: 100%;
+    overflow: auto;
 }
 
 a:hover {
@@ -139,7 +122,7 @@ a:hover {
             max-width: 100%;
             display: flex;
             margin: 0 auto;
-            cursor: pointer;
+            pointer-events: none;
         }
 
 a {
@@ -183,10 +166,30 @@ a:hover {
 
 .content-intro {
     text-align: justify;
+    height: fit-content;
+    padding-bottom: 50px;
 }
 
 table {
     width: 100%;
+}
+
+.image-line {
+    display: none;
+}
+
+.text-line td {
+    vertical-align: top;
+    padding-bottom: 10px;
+    padding-right: 10px;
+}
+
+.text-line {
+    height: fit-content;
+}
+.intro-line {
+    text-align: justify;
+    padding-bottom: 30px;
 }
 
 /*************** DESKTOP */
@@ -201,6 +204,26 @@ table {
                     --width-text-image-buffer: 20px;
                     --width-image: 700px;
                 }
+
+                .overlay {
+                    width: 100%;
+                    height: 100%;
+                    background-color: #000000dc;
+                    display: none;
+                    position: fixed;
+                    top: 0;
+                    left: 0;
+                    justify-content: center; /* Horizontale Zentrierung */
+                    align-items: center;
+                    cursor: pointer;
+                }
+                
+                .image-fullsize {
+                    height: 80vh;
+                    border: 40px solid white;
+                    cursor:auto;
+                }
+
                     .wrapper {
                         width: var(--width-total);
                         height: 95vh;
@@ -224,15 +247,23 @@ table {
                         display: flex;
                         flex-wrap: wrap;
                         justify-content: space-between;
+                        align-content: flex-start;
                         overflow-y: auto;
+                        height: 100%;
                         padding-right: var(--width-space-scrollbar); /**for scroll bar*/
                         /* background-color: rgb(146, 230, 68); */
                     }
-
+                    .intro-line {
+                        padding-bottom: 50px;
+                    }
+                    .camera-specs-table {
+                        margin-bottom: 50px;
+                    }
                     .content-intro {
                         width: var(--width-content);
                         height: fit-content;
                         text-align: justify;
+
                         /* background-color: rgb(68, 230, 217); */
                     }
 
@@ -280,6 +311,8 @@ table {
 
                     .image {
                         margin-right: 0;
+                        cursor: pointer;
+                        pointer-events: auto;
                     }
 
                     .return-link {
@@ -288,6 +321,25 @@ table {
 
                     .main-nav {
                         padding-right: 15px;
+                    }
+
+                    .image-band {
+                        margin-top: 15px;
+                        width: 100%;
+                        height: 170px;
+                        overflow-x: auto;
+                        display: flex;            /* Bilder horizontal anordnen */
+                        overflow-x: auto;         /* Horizontales Scrollen bei Überlauf ermöglichen */
+                        white-space: nowrap; 
+                        padding-bottom: 15px;
+                    }
+
+                    .image-band img {
+                        height: 100%;             /* Bilder auf die Höhe des Containers skalieren */
+                        width: auto;              /* Seitenverhältnis beibehalten */
+                        object-fit: cover;        /* Das Bild wird skaliert, um den Container zu füllen */
+                        margin-right: 10px; 
+                        cursor: pointer;
                     }
                 }
 
