--- a/templates/article_template01.html
+++ b/templates/article_template01.html
@@ -27,6 +27,7 @@ TEMPLATE
 </head>
 
 <body>
+    <!-- FULL SIZE OVERLAY -->
     <div id="id-overlay" onclick="toggleOverlay(event)" class="overlay">
         <image id="id-image-fullsize" class="image-fullsize"></image>
     </div>
