--- a/templates/article_template02.html
+++ b/templates/article_template02.html
@@ -65,7 +65,7 @@
             <div class="content-intro">
                 <h2>{{article.title}}</h2><br>
                 <p>
-                    {{article.intro_text}}
+                    {{article.intro_text|safe}}
                 </p>   <br><br><br><br>
             </div>
              
