--- a/templates/article_template03.html
+++ b/templates/article_template03.html
@@ -9,7 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
-    <link rel="icon" href="media/favicon.jpg" type="image/x-icon">
+    
+    <link rel="icon" href="/media/favicon.jpg" type="image/x-icon">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -72,7 +73,7 @@
             <div class="intro-line">    
                 <h2>{{article.title}}</h2><br>
                 <p>
-                    {{article.intro_text}}
+                    {{article.intro_text|safe}}
                 </p>
             </div>
 
