--- a/templates/article_template02.html
+++ b/templates/article_template02.html
@@ -41,8 +41,10 @@
                                 {% endfor %}
                                 <br>
 
-                                <a onclick="styleBright()">hell</a> | <a onclick="styleDark()">dunkel</a><br>
-                                <br>
+                                <div class="theme-menu disable_mobile">
+                                    <a class="disable_mobile" onclick="styleBright()">hell</a>&nbsp;|&nbsp;<a class="disable_mobile" onclick="styleDark()">dunkel</a><br>
+                                    <br>    
+                                </div>
 
                                 <!-- Artikel nav -->
                                 <div class="sub-nav-div">
