--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
                                 <br>
                                 {% endfor %}
                                 <br>
-                                <a onclick="styleBright()">hell</a> | <a onclick="styleDark()">dunkel</a>
+                                <a onclick="styleBright()">hell</a>&nbsp;|&nbsp;<a onclick="styleDark()">dunkel</a>
                             </nav> 
                         </div>
                     </td>          
