--- a/templates/article_template01.html
+++ b/templates/article_template01.html
@@ -53,8 +53,11 @@ TEMPLATE
                                 {% endfor %}
                                 <br>
 
-                                <a onclick="styleBright()">hell</a> | <a onclick="styleDark()">dunkel</a><br>
-                                <br>
+                                <div class="theme-menu disable_mobile">
+                                    <a class="disable_mobile" onclick="styleBright()">hell</a>&nbsp;|&nbsp;<a class="disable_mobile" onclick="styleDark()">dunkel</a><br>
+                                    <br> 
+                                </div>
+                                
 
                                 <!-- Chapter nav -->
                                 <div class="sub-nav-div">
