--- a/templates/article_template03.html
+++ b/templates/article_template03.html
@@ -47,8 +47,11 @@
                                 {% endfor %}
                                 <br>
 
-                                <a onclick="styleBright()">hell</a> | <a onclick="styleDark()">dunkel</a><br>
-                                <br>
+                                <div class="theme-menu disable_mobile">
+                                    <a class="disable_mobile" onclick="styleBright()">hell</a>&nbsp;|&nbsp;<a class="disable_mobile" onclick="styleDark()">dunkel</a>
+                                    <br>    
+                                    <br>    
+                                </div>
 
                                 <!-- Artikel nav -->
                                 <div class="sub-nav-div">
@@ -88,71 +91,71 @@
                 <table class="camera-specs-table">
                     <tr>
                         <td>Hersteller:</td>
-                        <td>{{link.camera.manufacturer}}</td>
+                        <td class="cst-content">{{link.camera.manufacturer}}</td>
                     </tr>
                     <tr>
                         <td>Produktionszeitraum:</td> 
-                        <td>{{link.camera.first_production}} - {{link.camera.last_production}}</td>
+                        <td class="cst-content">{{link.camera.first_production}} - {{link.camera.last_production}}</td>
                     </tr>
                     <tr>
                         <td>Sucher:</td>
-                        <td>{{link.camera.view_finder_type}}</td>
+                        <td class="cst-content">{{link.camera.view_finder_type}}</td>
                     </tr>
                     <tr>
                         <td>Objektiv:</td>
-                        <td>{{link.camera.lens.title}}, {{link.camera.lens_type}}</td>
+                        <td class="cst-content">{{link.camera.lens.title}}, {{link.camera.lens_type}}</td>
                     </tr>
                     <tr>
                         <td>Belichtungsmodus:</td> 
-                        <td>{{link.camera.modes}}</td>
+                        <td class="cst-content">{{link.camera.modes}}</td>
                     </tr>
                     <tr>
                         <td>Belichtungsmessung:</td>  
-                        <td>{{link.camera.lightmeter_type}}</td>
+                        <td class="cst-content">{{link.camera.lightmeter_type}}</td>
                     </tr>
                     <tr>
                         <td>Belichtungszeiten:</td>  
-                        <td>{{link.camera.min_shutter_speed}}s - {{link.camera.max_shutter_speed}}s {% if link.camera.bulb %}, Bulb-Modus {%else%} ,kein Bulb-Modus {%endif%}  </td>
+                        <td class="cst-content">{{link.camera.min_shutter_speed}}s - {{link.camera.max_shutter_speed}}s {% if link.camera.bulb %}, Bulb-Modus {%else%} ,kein Bulb-Modus {%endif%}  </td>
                     </tr>
                     <tr>
                         <td>Filmformat:</td>  
-                        <td>{{link.camera.film_size}}</td>
+                        <td class="cst-content">{{link.camera.film_size}}</td>
                     </tr>
                     <tr>
                         <td>ISO-Einstellung:</td>  
-                        <td>{{link.camera.iso_setting}}, ISO {{link.camera.min_iso}}-{{link.camera.max_iso}}</td>
+                        <td class="cst-content">{{link.camera.iso_setting}}, ISO {{link.camera.min_iso}}-{{link.camera.max_iso}}</td>
                     </tr>
                     <tr>
                         <td>Sonstiges:</td>  
-                        <td>{{link.camera.accessories}}</td>
+                        <td class="cst-content">{{link.camera.accessories}}</td>
                     </tr>
                     <tr>
                         <td>Abmessungen</td>  
-                        <td>{{link.camera.width}}mm, {{link.camera.height}}mm, {{link.camera.depth}}mm</td>
+                        <td class="cst-content">{{link.camera.width}}mm, {{link.camera.height}}mm, {{link.camera.depth}}mm</td>
                     </tr>
                     <tr>
                         <td>Gewicht:</td>  
-                        <td>{{link.camera.weight}}g</td>
+                        <td class="cst-content">{{link.camera.weight}}g</td>
                     </tr>
                     <tr>
                         <td>Material:</td>  
-                        <td>{{link.camera.build_material}}</td>
+                        <td class="cst-content">{{link.camera.build_material}}</td>
                     </tr>
                     <tr>
                         <td>Farbvarianten:</td>  
-                        <td>{{link.camera.color_variants}}</td>
+                        <td class="cst-content">{{link.camera.color_variants}}</td>
                     </tr>
                     <tr>
                         <td>Batterien</td>  
-                        <td>{{link.camera.battery}}</td>
+                        <td class="cst-content">{{link.camera.battery}}</td>
                     </tr>
                 </table>
             
             Fotos, die mit der {{link.camera.title}} gemacht wurden:
             <div class="image-band">
-                {% for image in allimages%}
+                {% for image in allimages %}
                     {% if image.camera == link.camera %}
-                        <img onclick="toggleOverlay(event)" loading="lazy" src="{{image.image.url}}"></img><br>
+                        <img onclick="toggleOverlay(event)" loading="lazy" src="{{image.image_file.url}}"></img><br>
                         <a href="#" class="return-link">... zurück nach oben</a><br>
                         <br>
                         <br>
