--- a/templates/article_template01.html
+++ b/templates/article_template01.html
@@ -94,7 +94,7 @@ TEMPLATE
             <div class ="image-text-bundle">
                 <!-- Image -->
                 <div class="image-section">
-                    <img onclick="toggleOverlay(event)" class="image" src="{{image.image.image_file.url}}" alt="">
+                    <img onclick="toggleOverlay(event)" loading="lazy" class="image" src="{{image.image.image_file.url}}" alt="">
                 </div>
 
                 <!-- Article -->
